# litterix-rs

./: Cargo.toml  LICENSE.md  index.html  readme.md
.github/workflows/: gh-pages-deploy.yml
assets/: main.css
assets/datasets/: advanced-dataset.json  base-dataset.json  intermedie-dataset.json
assets/style/: animations.css  main.css
assets/style/components/: game.module.css  navbar.module.css
assets/style/components/typing/: combo_popup.module.css  engine.module.css  metrics.module.css  rush_mode.module.css  zen_mode.module.css
assets/style/pages/: home.module.css  project.module.css  settings.module.css
src/: app.rs  main.rs  settings_store.rs  stats_store.rs
src/components/: bio.rs  counter.rs  gallery.rs  game.rs  mod.rs  navbar.rs  topbar.rs  typing_text.rs
src/components/typing/: combo_popup.rs  engine.rs  marathon_mode.rs  metrics_bar.rs  mod.rs  rush_mode.rs  zen_mode.rs
src/pages/: dashboard.rs  homepage.rs  mod.rs  project.rs  settings.rs
